--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.5"
   },
