--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-simple-star-rating": "^5.1.7",
+    "react-stars": "^2.2.5",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.5"
